# CreatorShield

./: README.md  pyproject.toml
creatorshield/: __init__.py  __main__.py  cli.py  core.py
tests/: test_e2e.py
